--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,3 @@
-
-
-
 {
     // 使用 IntelliSense 了解相关属性。 
     // 悬停以查看现有属性的描述。
@@ -11,7 +8,7 @@
             "name": "gcc.exe - 生成和调试活动文件",  // 该调试任务的名字，启动调试时会在待选列表中显示
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Datastructure/a.exe",
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,  // 这一项控制是否在入口处暂停，默认false不暂停，改为true暂停
             "cwd": "${workspaceFolder}",
